# DopeVector

./: CMakeLists.txt  README.md  sources_properties.cmake
example/: CMakeLists.txt  main.cpp
include/Common/: Common.hpp  Index.hpp
include/Common/inlines/: Index.inl
include/DopeVector/: DopeVector.hpp  DopeVectorExtent.hpp  DopeVectors.hpp  Grid.hpp  Index.hpp
include/DopeVector/Common/: Common.hpp  Expression.hpp  Index.hpp
include/DopeVector/Common/inlines/: Expression.inl  Index.inl
include/DopeVector/inlines/: DopeVector.inl  DopeVectorExtent.inl
include/DopeVector/internal/: Common.hpp  Expression.hpp  GridIterator.hpp  Index.hpp  Iterator.hpp
include/DopeVector/internal/eigen_support/: EigenExpression.hpp
include/DopeVector/internal/inlines/: DopeVector.inl  Expression.inl  Grid.inl  GridIterator.inl  Index.inl  Iterator.inl
include/DopeVector/internal/inlines/eigen_support/: EigenExpression.inl
include/Grid/: Grid.hpp  GridIterator.hpp
include/Grid/inlines/: Grid.inl  GridIterator.inl
